<resources>
    <string name="app_name">Interface</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_da_aplica_o">Data da Aplicação:</string>
    <string name="respondente">Respondente:</string>
    <string name="aplicador">Aplicador:</string>
    <string name="local">Local:</string>
    <string name="status">Status:</string>
    <string name="formul_rio_01">Formulário: [01]</string>
    <string name="aplica_es_realizadas">Aplicações Realizadas</string>
    <string name="formul_rio">Formulário</string>
    <string name="aplica_o">Aplicação</string>
    <string name="visializa_o">Visialização</string>
    <string name="transmiss_o">Transmissão</string>
    <string name="total_50">Total: 50</string>
</resources>